@@ -1,65 +1,76 @@
 <gconfschemafile>
     <schemalist>    
+     <schema>
+     <key>/schemas/apps/gnomine/geometry/width</key>
+     <applyto>/apps/gnomine/geometry/width</applyto>
+     <owner>gnomine</owner>
+     <type>int</type>
+     <default>320</default>
+     <locale name="C">
+     <short>The width of the window</short>
+     <long>The width of the playing window in pixels.</long>
+     </locale>
+     </schema>
 
-      <schema>
-      <key>/schemas/apps/gnomine/geometry/xsize</key>
-      <applyto>/apps/gnomine/geometry/xsize</applyto>
-      <owner>gnomine</owner>
-      <type>int</type>
-      <default>16</default>
-      <locale name="C">
-      <short></short>
-      <long></long>
-      </locale>
-      </schema>
+     <schema>
+     <key>/schemas/apps/gnomine/geometry/height</key>
+     <applyto>/apps/gnomine/geometry/height</applyto>
+     <owner>gnomine</owner>
+     <type>int</type>
+     <default>240</default>
+     <locale name="C">
+     <short>The height of the window</short>
+     <long>The height of the playing window in pixels.</long>
+     </locale>
+     </schema>
 
-      <schema>
-      <key>/schemas/apps/gnomine/geometry/ysize</key>
-      <applyto>/apps/gnomine/geometry/ysize</applyto>
-      <owner>gnomine</owner>
-      <type>int</type>
-      <default>16</default>
-      <locale name="C">
-      <short></short>
-      <long></long>
-      </locale>
-      </schema>
+     <schema>
+     <key>/schemas/apps/gnomine/geometry/xsize</key>
+     <applyto>/apps/gnomine/geometry/xsize</applyto>
+     <owner>gnomine</owner>
+     <type>int</type>
+     <default>16</default>
+     <locale name="C">
+     <short>Number of columns in a custom game</short>
+     <long></long>
+     </locale>
+     </schema>
 
-      <schema>
-      <key>/schemas/apps/gnomine/geometry/nmines</key>
-      <applyto>/apps/gnomine/geometry/nmines</applyto>
-      <owner>gnomine</owner>
-      <type>int</type>
-      <default>40</default>
-      <locale name="C">
-      <short></short>
-      <long></long>
-      </locale>
-      </schema>
+     <schema>
+     <key>/schemas/apps/gnomine/geometry/ysize</key>
+     <applyto>/apps/gnomine/geometry/ysize</applyto>
+     <owner>gnomine</owner>
+     <type>int</type>
+     <default>16</default>
+     <locale name="C">
+     <short>Number of rows in a custom game</short>
+     <long></long>
+     </locale>
+     </schema>
 
-      <schema>
-      <key>/schemas/apps/gnomine/geometry/minesize</key>
-      <applyto>/apps/gnomine/geometry/minesize</applyto>
-      <owner>gnomine</owner>
-      <type>int</type>
-      <default>17</default>
-      <locale name="C">
-      <short></short>
-      <long></long>
-      </locale>
-      </schema>
+     <schema>
+     <key>/schemas/apps/gnomine/geometry/nmines</key>
+     <applyto>/apps/gnomine/geometry/nmines</applyto>
+     <owner>gnomine</owner>
+     <type>int</type>
+     <default>40</default>
+     <locale name="C">
+     <short>The number of mines in a custom game</short>
+     <long></long>
+     </locale>
+     </schema>
 
-      <schema>
-      <key>/schemas/apps/gnomine/geometry/mode</key>
-      <applyto>/apps/gnomine/geometry/mode</applyto>
-      <owner>gnomine</owner>  
-      <type>int</type>                
-      <default>0</default>
-      <locale name="C">
-      <short></short>
-      <long></long>
-      </locale>
-      </schema>
+     <schema>
+     <key>/schemas/apps/gnomine/geometry/mode</key>
+     <applyto>/apps/gnomine/geometry/mode</applyto>
+     <owner>gnomine</owner>  
+     <type>int</type>                
+     <default>0</default>
+     <locale name="C">
+     <short>Board size</short>
+     <long>Size of the board (0-2 = small-large, 3=custom)</long>
+     </locale>
+     </schema>
 
      <schema>
      <key>/schemas/apps/gnomine/use_question_marks</key>
@@ -85,6 +96,17 @@
      </locale>
      </schema>
 								 
+     <schema>
+     <key>/schemas/apps/gnomine/use_autoflag</key>
+     <applyto>/apps/gnomine/use_autoflag</applyto>
+     <owner>gnomine</owner>
+     <type>bool</type>
+     <default>FALSE</default>
+     <locale name="C">
+     <short>Enable automatic placing of flags</short>
+     <long>Set to true to have gnomine automatically flag squares as mined when enough squares are revealed</long>
+     </locale>
+     </schema>
 								 
   </schemalist>
   
