@@ -1,3 +1,8 @@
+2006-12-10  Robert Ancell  <robert.ancell@gmail.com>
+	* minefield.c: Refactored to add gtk_minefield_set_mark() (simpler to understand)
+	* minefield.c: Added gtk_minefield_solve_square() (Bug #307245) (disabled by default)
+	* gnomine.schemas.in: Added missing schema entries
+
 2006-08-04  Andreas Røsdal  <andrearo@stud.ntnu.no>
 
 	* help/C/gnomine.xml: Remove incorrect escaping of special
